# bazel-example

./: .gitignore  BUILD  README.md  WORKSPACE
client-go/: BUILD.bazel  echo-client.go  go.mod
client-java/: BUILD
client-python/: BUILD
proto/: BUILD  echo.proto
server-go/: BUILD.bazel  echo.go  go.mod  go.sum
