load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client-go_lib",
    srcs = ["echo-client.go"],
    importpath = "client-go/client-go",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:echo_go_grpc",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client-go",
    embed = [":client-go_lib"],
    visibility = ["//visibility:public"],
)
