load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_compile") #keep

#keep
go_grpc_compile(
    name = "ibsen_go_grpc",
    protos = ["//proto:ibsen_proto"],
)

go_library(
    name = "server-go_lib",
    srcs = ["hello.go"],
    importpath = "server-go/server-go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "server-go",
    embed = [":server-go_lib"],
    visibility = ["//visibility:public"],
)
