load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server-go_lib",
    srcs = ["echo.go"],
    importpath = "server-go/server-go",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:echo_go_grpc",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server-go",
    embed = [":server-go_lib"],
    visibility = ["//visibility:public"],
)
